--- a/libraries/ems/ssn4.tex
+++ b/libraries/ems/ssn4.tex
@@ -1,34 +1,30 @@
-\documentclass[twoside,11pt]{article}
+\documentclass[twoside,11pt]{starlink}
 
 % ? Specify used packages
-% \usepackage{graphicx}        %  Use this one for final production.
-% \usepackage[draft]{graphicx} %  Use this one for drafting.
 % ? End of specify used packages
-
-\pagestyle{myheadings}
 
 % -----------------------------------------------------------------------------
 % ? Document identification
 % Fixed part
-\newcommand{\stardoccategory}  {Starlink System Note}
-\newcommand{\stardocinitials}  {SSN}
-\newcommand{\stardocsource}    {sun\stardocnumber}
-\newcommand{\stardoccopyright}
+\stardoccategory    {Starlink System Note}
+\stardocinitials    {SSN}
+\stardocsource      {sun\stardocnumber}
+\stardoccopyright
 {Copyright \copyright\ 2001 Council for the Central Laboratory of the Research
  Councils \newline\
 Copyright \copyright\ 2008 Science and Technology Facilities Council}
 
 % Variable part - replace [xxx] as appropriate.
-\newcommand{\stardocnumber}    {4.14}
-\newcommand{\stardocauthors}   {P.C.T. Rees \\
+\stardocnumber      {4.14}
+\stardocauthors   {P.C.T. Rees \\
                                 A.J. Chipperfield \\
                                 P.W. Draper}
-\newcommand{\stardocdate}      {31 Jul 2008}
-\newcommand{\stardoctitle}     {EMS \\ [\latex{1ex}]
+\stardocdate        {31 Jul 2008}
+\stardoctitle       {EMS \\ [\latex{1ex}]
                                 Error Message Service}
-\newcommand{\stardocversion}   {Version 2.2-0}
-\newcommand{\stardocmanual}    {Programmer's Manual}
-\newcommand{\stardocabstract}  {This document describes the Error Message
+\stardocversion     {Version 2.2-0}
+\stardocmanual      {Programmer's Manual}
+\stardocabstract  {This document describes the Error Message
 Service, EMS, and its use in system software.
 The purpose of EMS is to provide facilities for constructing and storing
 error messages for future delivery to the user -- usually via the Starlink
@@ -46,530 +42,15 @@ This document is intended for Starlink systems programmers and can safely be
 ignored by applications programmers and users.}
 
 % -----------------------------------------------------------------------------
-
-% +
-%  Name:
-%     sun.tex
-%
-%  Purpose:
-%     Template for Starlink User Note (SUN) documents.
-%     Refer to SUN/199
-%
-%  Authors:
-%     AJC: A.J.Chipperfield (Starlink, RAL)
-%     BLY: M.J.Bly (Starlink, RAL)
-%     PWD: Peter W. Draper (Starlink, Durham University)
-%
-%  History:
-%     17-JAN-1996 (AJC):
-%        Original with hypertext macros, based on MDL plain originals.
-%     16-JUN-1997 (BLY):
-%        Adapted for LaTeX2e.
-%        Added picture commands.
-%     13-AUG-1998 (PWD):
-%        Converted for use with LaTeX2HTML version 98.2 and
-%        Star2HTML version 1.3.
-%      1-FEB-2000 (AJC):
-%        Add Copyright statement in LaTeX
-%     {Add further history here}
-%
-% -
-
-\newcommand{\stardocname}{\stardocinitials /\stardocnumber}
-\markboth{\stardocname}{\stardocname}
-\setlength{\textwidth}{160mm}
-\setlength{\textheight}{230mm}
-\setlength{\topmargin}{-2mm}
-\setlength{\oddsidemargin}{0mm}
-\setlength{\evensidemargin}{0mm}
-\setlength{\parindent}{0mm}
-\setlength{\parskip}{\medskipamount}
-\setlength{\unitlength}{1mm}
-
 % -----------------------------------------------------------------------------
-%  Hypertext definitions.
-%  ======================
-%  These are used by the LaTeX2HTML translator in conjunction with star2html.
-
-%  Comment.sty: version 2.0, 19 June 1992
-%  Selectively in/exclude pieces of text.
-%
-%  Author
-%    Victor Eijkhout                                      <eijkhout@cs.utk.edu>
-%    Department of Computer Science
-%    University Tennessee at Knoxville
-%    104 Ayres Hall
-%    Knoxville, TN 37996
-%    USA
-
-%  Do not remove the %begin{latexonly} and %end{latexonly} lines (used by
-%  LaTeX2HTML to signify text it shouldn't process).
-%begin{latexonly}
-\makeatletter
-\def\makeinnocent#1{\catcode`#1=12 }
-\def\csarg#1#2{\expandafter#1\csname#2\endcsname}
-
-\def\ThrowAwayComment#1{\begingroup
-    \def\CurrentComment{#1}%
-    \let\do\makeinnocent \dospecials
-    \makeinnocent\^^L% and whatever other special cases
-    \endlinechar`\^^M \catcode`\^^M=12 \xComment}
-{\catcode`\^^M=12 \endlinechar=-1 %
- \gdef\xComment#1^^M{\def\test{#1}
-      \csarg\ifx{PlainEnd\CurrentComment Test}\test
-          \let\html@next\endgroup
-      \else \csarg\ifx{LaLaEnd\CurrentComment Test}\test
-            \edef\html@next{\endgroup\noexpand\end{\CurrentComment}}
-      \else \let\html@next\xComment
-      \fi \fi \html@next}
-}
-\makeatother
-
-\def\includecomment
- #1{\expandafter\def\csname#1\endcsname{}%
-    \expandafter\def\csname end#1\endcsname{}}
-\def\excludecomment
- #1{\expandafter\def\csname#1\endcsname{\ThrowAwayComment{#1}}%
-    {\escapechar=-1\relax
-     \csarg\xdef{PlainEnd#1Test}{\string\\end#1}%
-     \csarg\xdef{LaLaEnd#1Test}{\string\\end\string\{#1\string\}}%
-    }}
-
-%  Define environments that ignore their contents.
-\excludecomment{comment}
-\excludecomment{rawhtml}
-\excludecomment{htmlonly}
-
-%  Hypertext commands etc. This is a condensed version of the html.sty
-%  file supplied with LaTeX2HTML by: Nikos Drakos <nikos@cbl.leeds.ac.uk> &
-%  Jelle van Zeijl <jvzeijl@isou17.estec.esa.nl>. The LaTeX2HTML documentation
-%  should be consulted about all commands (and the environments defined above)
-%  except \xref and \xlabel which are Starlink specific.
-
-\newcommand{\htmladdnormallinkfoot}[2]{#1\footnote{#2}}
-\newcommand{\htmladdnormallink}[2]{#1}
-\newcommand{\htmladdimg}[1]{}
-\newcommand{\hyperref}[4]{#2\ref{#4}#3}
-\newcommand{\htmlref}[2]{#1}
-\newcommand{\htmlimage}[1]{}
-\newcommand{\htmladdtonavigation}[1]{}
-
-\newenvironment{latexonly}{}{}
-\newcommand{\latex}[1]{#1}
-\newcommand{\html}[1]{}
-\newcommand{\latexhtml}[2]{#1}
-\newcommand{\HTMLcode}[2][]{}
-
-%  Starlink cross-references and labels.
-\newcommand{\xref}[3]{#1}
-\newcommand{\xlabel}[1]{}
-
-%  LaTeX2HTML symbol.
-\newcommand{\latextohtml}{\LaTeX2\texttt{HTML}}
-
-%  Define command to re-centre underscore for Latex and leave as normal
-%  for HTML (severe problems with \_ in tabbing environments and \_\_
-%  generally otherwise).
-\renewcommand{\_}{\texttt{\symbol{95}}}
-
-% -----------------------------------------------------------------------------
-%  Debugging.
-%  =========
-%  Remove % on the following to debug links in the HTML version using Latex.
-
-% \newcommand{\hotlink}[2]{\fbox{\begin{tabular}[t]{@{}c@{}}#1\\\hline{\footnotesize #2}\end{tabular}}}
-% \renewcommand{\htmladdnormallinkfoot}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\htmladdnormallink}[2]{\hotlink{#1}{#2}}
-% \renewcommand{\hyperref}[4]{\hotlink{#1}{\S\ref{#4}}}
-% \renewcommand{\htmlref}[2]{\hotlink{#1}{\S\ref{#2}}}
-% \renewcommand{\xref}[3]{\hotlink{#1}{#2 -- #3}}
-%end{latexonly}
-% -----------------------------------------------------------------------------
-% ? Document specific \newcommand or \newenvironment commands.
-\newcommand{\listline}{\hspace{1pt}\\}
-\begin{htmlonly}
-  \newcommand{\listline}{}
-\end{htmlonly}
-
-%+
-%  Name:
-%     SST.TEX
-
-%  Purpose:
-%     Define LaTeX commands for laying out Starlink routine descriptions.
-
-%  Language:
-%     LaTeX
-
-%  Type of Module:
-%     LaTeX data file.
-
-%  Description:
-%     This file defines LaTeX commands which allow routine documentation
-%     produced by the SST application PROLAT to be processed by LaTeX and
-%     by LaTeX2html. The contents of this file should be included in the
-%     source prior to any statements that make of the sst commnds.
-
-%  Notes:
-%     The style file html.sty provided with LaTeX2html needs to be used.
-%     This must be before this file.
-
-%  Authors:
-%     RFWS: R.F. Warren-Smith (STARLINK)
-%     PDRAPER: P.W. Draper (Starlink - Durham University)
-
-%  History:
-%     10-SEP-1990 (RFWS):
-%        Original version.
-%     10-SEP-1990 (RFWS):
-%        Added the implementation status section.
-%     12-SEP-1990 (RFWS):
-%        Added support for the usage section and adjusted various spacings.
-%     8-DEC-1994 (PDRAPER):
-%        Added support for simplified formatting using LaTeX2html.
-%     {enter_further_changes_here}
-
-%  Bugs:
-%     {note_any_bugs_here}
-
-%-
-
-%  Define length variables.
-\newlength{\sstbannerlength}
-\newlength{\sstcaptionlength}
-\newlength{\sstexampleslength}
-\newlength{\sstexampleswidth}
-
-%  Define a \tt font of the required size.
-\latex{\newfont{\ssttt}{cmtt10 scaled 1095}}
-\html{\newcommand{\ssttt}{\tt}}
-
-%  Define a command to produce a routine header, including its name,
-%  a purpose description and the rest of the routine's documentation.
-\newcommand{\sstroutine}[3]{
-   \goodbreak
-   \rule{\textwidth}{0.5mm}
-   \vspace{-7ex}
-   \newline
-   \settowidth{\sstbannerlength}{{\Large {\bf #1}}}
-   \setlength{\sstcaptionlength}{\textwidth}
-   \setlength{\sstexampleslength}{\textwidth}
-   \addtolength{\sstbannerlength}{0.5em}
-   \addtolength{\sstcaptionlength}{-2.0\sstbannerlength}
-   \addtolength{\sstcaptionlength}{-5.0pt}
-   \settowidth{\sstexampleswidth}{{\bf Examples:}}
-   \addtolength{\sstexampleslength}{-\sstexampleswidth}
-   \parbox[t]{\sstbannerlength}{\flushleft{\Large {\bf #1}}}
-   \parbox[t]{\sstcaptionlength}{\center{\Large #2}}
-   \parbox[t]{\sstbannerlength}{\flushright{\Large {\bf #1}}}
-   \begin{description}
-      #3
-   \end{description}
-}
-
-%  Format the description section.
-\newcommand{\sstdescription}[1]{\item[Description:] #1}
-
-%  Format the usage section.
-\newcommand{\sstusage}[1]{\item[Usage:] \mbox{}
-\\[1.3ex]{\raggedright \ssttt #1}}
-
-%  Format the invocation section.
-\newcommand{\sstinvocation}[1]{\item[Invocation:]\hspace{0.4em}{\tt #1}}
-
-%  Format the arguments section.
-\newcommand{\sstarguments}[1]{
-   \item[Arguments:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the returned value section (for a function).
-\newcommand{\sstreturnedvalue}[1]{
-   \item[Returned Value:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the parameters section (for an application).
-\newcommand{\sstparameters}[1]{
-   \item[Parameters:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Format the examples section.
-\newcommand{\sstexamples}[1]{
-   \item[Examples:] \mbox{} \\
-   \vspace{-3.5ex}
-   \begin{description}
-      #1
-   \end{description}
-}
-
-%  Define the format of a subsection in a normal section.
-\newcommand{\sstsubsection}[1]{ \item[{#1}] \mbox{} \\}
-
-%  Define the format of a subsection in the examples section.
-\newcommand{\sstexamplesubsection}[2]{\sloppy
-\item[\parbox{\sstexampleslength}{\ssttt #1}] \mbox{} \vspace{1.0ex}
-\\ #2 }
-
-%  Format the notes section.
-\newcommand{\sstnotes}[1]{\item[Notes:] \mbox{} \\[1.3ex] #1}
-
-%  Provide a general-purpose format for additional (DIY) sections.
-\newcommand{\sstdiytopic}[2]{\item[{\hspace{-0.35em}#1\hspace{-0.35em}:}]
-\mbox{} \\[1.3ex] #2}
-
-%  Format the implementation status section.
-\newcommand{\sstimplementationstatus}[1]{
-   \item[{Implementation Status:}] \mbox{} \\[1.3ex] #1}
-
-%  Format the bugs section.
-\newcommand{\sstbugs}[1]{\item[Bugs:] #1}
-
-%  Format a list of items while in paragraph mode.
-\newcommand{\sstitemlist}[1]{
-  \mbox{} \\
-  \vspace{-3.5ex}
-  \begin{itemize}
-     #1
-  \end{itemize}
-}
-
-%  Define the format of an item.
-\newcommand{\sstitem}{\item}
-
-%% Now define html equivalents of those already set. These are used by
-%  latex2html and are defined in the html.sty files.
-\begin{htmlonly}
-
-%  sstroutine.
-   \newcommand{\sstroutine}[3]{
-      \subsection{#1\xlabel{#1}-\label{#1}#2}
-      \begin{description}
-         #3
-      \end{description}
-   }
-
-%  sstdescription
-   \newcommand{\sstdescription}[1]{\item[Description:]
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstusage
-   \newcommand{\sstusage}[1]{\item[Usage:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstinvocation
-   \newcommand{\sstinvocation}[1]{\item[Invocation:]
-      \begin{description}
-         {\ssttt #1}
-      \end{description}
-      \\
-   }
-
-%  sstarguments
-   \newcommand{\sstarguments}[1]{
-      \item[Arguments:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstreturnedvalue
-   \newcommand{\sstreturnedvalue}[1]{
-      \item[Returned Value:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstparameters
-   \newcommand{\sstparameters}[1]{
-      \item[Parameters:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstexamples
-   \newcommand{\sstexamples}[1]{
-      \item[Examples:] \\
-      \begin{description}
-         #1
-      \end{description}
-      \\
-   }
-
-%  sstsubsection
-   \newcommand{\sstsubsection}[1]{\item[{#1}]}
-
-%  sstexamplesubsection
-   \newcommand{\sstexamplesubsection}[2]{\item[{\ssttt #1}] #2}
-
-%  sstnotes
-   \newcommand{\sstnotes}[1]{\item[Notes:] #1 }
-
-%  sstdiytopic
-   \newcommand{\sstdiytopic}[2]{\item[{#1}] #2 }
-
-%  sstimplementationstatus
-   \newcommand{\sstimplementationstatus}[1]{
-      \item[Implementation Status:] #1
-   }
-
-%  sstitemlist
-   \newcommand{\sstitemlist}[1]{
-      \begin{itemize}
-         #1
-      \end{itemize}
-      \\
-   }
-%  sstitem
-   \newcommand{\sstitem}{\item}
-
-\end{htmlonly}
-
-%  End of "sst.tex" layout definitions.
-%.
-
+% ? Document specific \providecommand or \newenvironment commands.
+\providecommand{\listline}{\hspace{1pt}\\}
 % ? End of document specific commands
 % -----------------------------------------------------------------------------
 %  Title Page.
 %  ===========
-\renewcommand{\thepage}{\roman{page}}
 \begin{document}
-\thispagestyle{empty}
-
-%  Latex document header.
-%  ======================
-\begin{latexonly}
-   CCLRC / \textsc{Rutherford Appleton Laboratory} \hfill \textbf{\stardocname}\\
-   {\large Particle Physics \& Astronomy Research Council}\\
-   {\large Starlink Project\\}
-   {\large \stardoccategory\ \stardocnumber}
-   \begin{flushright}
-   \stardocauthors\\
-   \stardocdate
-   \end{flushright}
-   \vspace{-4mm}
-   \rule{\textwidth}{0.5mm}
-   \vspace{5mm}
-   \begin{center}
-   {\Huge\textbf{\stardoctitle \\ [2.5ex]}}
-   {\LARGE\textbf{\stardocversion \\ [4ex]}}
-   {\Huge\textbf{\stardocmanual}}
-   \end{center}
-   \vspace{5mm}
-
-% ? Add picture here if required for the LaTeX version.
-%   e.g. \includegraphics[scale=0.3]{filename.ps}
-% ? End of picture
-
-% ? Heading for abstract if used.
-   \vspace{10mm}
-   \begin{center}
-      {\Large\textbf{Abstract}}
-   \end{center}
-% ? End of heading for abstract.
-\end{latexonly}
-
-%  HTML documentation header.
-%  ==========================
-\begin{htmlonly}
-   \xlabel{}
-   \begin{rawhtml} <H1 ALIGN=CENTER> \end{rawhtml}
-      \stardoctitle\\
-      \stardocversion\\
-      \stardocmanual
-   \begin{rawhtml} </H1> <HR> \end{rawhtml}
-
-% ? Add picture here if required for the hypertext version.
-%   e.g. \includegraphics[scale=0.7]{filename.ps}
-% ? End of picture
-
-   \begin{rawhtml} <P> <I> \end{rawhtml}
-   \stardoccategory\ \stardocnumber \\
-   \stardocauthors \\
-   \stardocdate
-   \begin{rawhtml} </I> </P> <H3> \end{rawhtml}
-      \htmladdnormallink{CCLRC / Rutherford Appleton Laboratory}
-                        {http://www.cclrc.ac.uk} \\
-      \htmladdnormallink{Particle Physics \& Astronomy Research Council}
-                        {http://www.pparc.ac.uk} \\
-   \begin{rawhtml} </H3> <H2> \end{rawhtml}
-      \htmladdnormallink{Starlink Project}{http://www.starlink.ac.uk/}
-   \begin{rawhtml} </H2> \end{rawhtml}
-   \htmladdnormallink{\htmladdimg{source.gif} Retrieve hardcopy}
-      {http://www.starlink.ac.uk/cgi-bin/hcserver?\stardocsource}\\
-
-%  HTML document table of contents.
-%  ================================
-%  Add table of contents header and a navigation button to return to this
-%  point in the document (this should always go before the abstract \section).
-  \label{stardoccontents}
-  \begin{rawhtml}
-    <HR>
-    <H2>Contents</H2>
-  \end{rawhtml}
-  \htmladdtonavigation{\htmlref{\htmladdimg{contents_motif.gif}}
-        {stardoccontents}}
-
-% ? New section for abstract if used.
-  \section{\xlabel{abstract}Abstract}
-% ? End of new section for abstract
-\end{htmlonly}
-
-% -----------------------------------------------------------------------------
-% ? Document Abstract. (if used)
-%  ==================
-\stardocabstract
-% ? End of document abstract
-
-% -----------------------------------------------------------------------------
-% ? Latex Copyright Statement
-%  =========================
-\begin{latexonly}
-\newpage
-\vspace*{\fill}
-\stardoccopyright
-\end{latexonly}
-% ? End of Latex copyright statement
-
-% -----------------------------------------------------------------------------
-% ? Latex document Table of Contents (if used).
-%  ===========================================
-  \newpage
-  \begin{latexonly}
-    \setlength{\parskip}{0mm}
-    \tableofcontents
-    \setlength{\parskip}{\medskipamount}
-    \markboth{\stardocname}{\stardocname}
-  \end{latexonly}
-% ? End of Latex document table of contents
-% -----------------------------------------------------------------------------
-
-\cleardoublepage
-\renewcommand{\thepage}{\arabic{page}}
-\setcounter{page}{1}
+\scfrontmatter
 
 %  Introduction page
 
@@ -650,11 +131,9 @@ libraries. See Appendix \ref{threading}.
 The subroutine used to report errors is \texttt{EMS\_REP}.
 It has a calling sequence analogous to that of
 \xref{\texttt{ERR\_REP}}{sun104}{ERR_REP}, \textit{i.e.}
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 CALL EMS_REP( PARAM, TEXT, STATUS )
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 The argument \texttt{PARAM} is the error message name, \texttt{TEXT}
 is the error message text
 and \texttt{STATUS} is the inherited status.
@@ -690,20 +169,16 @@ EMS does not provide an analogue to
 The facility to use message tokens to embed the values of program variables
 within the message text is available in EMS.
 As in MSG and ERR, these message tokens are  indicated by prefixing the token
-name with an up-arrow, ``$^\wedge$'', escape character within message text,
+name with an up-arrow, ``\wedge'', escape character within message text,
 \textit{e.g.}
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 CALL EMS_REP( 'EMS_ROUTN_TOKEN', 'Error text: ^TOKEN', STATUS )
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 Message tokens can be set to the most concise character encoding of a given
 variable's value with the routines \texttt{EMS\_SET\textit{x}}, \textit{e.g.}
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 CALL EMS_SETC( 'TOKEN', 'A token' )
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 For the \texttt{EMS\_SET\textit{x}} routines, \texttt{\textit{x}} corresponds
 to one of five standard Fortran 77 data types:
 \begin {center}
@@ -749,23 +224,17 @@ clarity and so should not be relied upon as the sole source of information
 in error reports.
 
 The subroutines are:
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 EMS_FACER( TOKEN, STATUS )
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 where \texttt{STATUS} is a standard Starlink facility status value,
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 EMS_FIOER( TOKEN, IOSTAT )
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 where \texttt{IOSTAT} is a Fortran I/O status code, and
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 EMS_SYSER( TOKEN, SYSTAT )
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 where \texttt{SYSTAT} is a status value returned from a system routine.
 
 In each case the message associated with the given error code is assigned to
@@ -865,11 +334,9 @@ for the subroutine library concerned.
 
 \texttt{EMS\_ELOAD} returns error message pending in the current error context,
 one by one in a series of calls; it has the calling sequence:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 CALL EMS_ELOAD( PARAM, PARLEN, OPSTR, OPLEN, STATUS )
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 On the first call of this routine, the error table for the current
 context is copied into a holding area, the current error context
 is annulled and the first message in the holding area is returned.
@@ -894,11 +361,9 @@ This process is the same as for
 which just calls \texttt{EMS\_ELOAD}.
 
 \texttt{EMS\_EXPND} has the calling sequence:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 CALL EMS_EXPND( TEXT, OPSTR, OPLEN, STATUS )
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 \texttt{TEXT} is the message text, \texttt{OPSTR} is the returned message text,
 \texttt{OPLEN} is the length of the message in \texttt{OPSTR} and
 \texttt{STATUS} is the inherited status.
@@ -930,7 +395,7 @@ The current naming scheme for the C functions (\texttt{emsAnnul}
 \textit{etc.}) replaces the earlier one (\texttt{ems\_annul\_c} \textit{etc.}),
 but the old names will still be recognised.
 There is no change to the argument lists.
-(See Appendix \ref{version_1_6} for more details.)
+(See Appendix \ref{C_sect} for more details.)
 
 Additional functions are available for C programmers:
 \begin{itemize}
@@ -1005,26 +470,21 @@ define).
 The Starlink convention is that the name in upper case with no path or
 extension is specified when including these files within Fortran code,
 \textit{e.g.}:
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 *  Global Constants:
       INCLUDE 'SAE_PAR'
       INCLUDE 'EMS_PAR'
-\end{verbatim}
-\end{quote}
-
+\end{terminalv}
 Equivalent header files are installed in \texttt{/star/include} for use in C
 code which is calling EMS -- they are named \texttt{sae\_par.h},
 \texttt{ems\_par.h} and \texttt{ems\_err.h}.
 In addition, \texttt{ems.h} contains the function prototypes for each of the C
 functions.
 The syntax
-\begin{quote}
-\begin{verbatim}
+\begin{terminalv}
 #include "sae_par.h"
 #include "ems.h"
-\end{verbatim}
-\end{quote}
+\end{terminalv}
 should be used within the C code, and the compiler option
 \texttt{-I/star/include} used when compiling C and Fortran code.
 
@@ -1034,20 +494,16 @@ programs are linked using the ADAM application linking commands,
 
 To link a non-ADAM Fortran program with the the Error Message Service, the
 command line would be something like:
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 % f77 -I$STARLINK_DIR/include program.f -L$STARLINK_DIR/lib `ems_link` \
       -o program.out
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 
 The command to compile and link a C program might be:
-\begin {quote}
-\begin{verbatim}
+\begin{terminalv}
 % cc -o program -I$STARLINK_DIR/include -L$STARLINK_DIR/lib program.c \
      `ems_link`
-\end{verbatim}
-\end {quote}
+\end{terminalv}
 
 \begin {quote}
 \emph{Note that the commands used to invoke the C and Fortran compilers vary
@@ -1075,14 +531,8 @@ Chipperfield, A.J. & \xref{SUN/185}{sun185}{}
 \end {tabular}
 \end{latexonly}
 
-\begin{htmlonly}
-Lawden, M.D. : \xref{SG/4}{sg4}{}
---- ADAM -- The Starlink Software Environment.\\
-Rees, P.C.T. : \xref{SUN/104}{sun104}{}
---- MSG and ERR -- Message and Error Reporting Systems.\\
-Chipperfield, A.J. : \xref{SUN/185}{sun185}{}
---- MESSGEN -- Starlink Facility Error Message Generation.
-\end{htmlonly}
+
+
 
 \newpage
 \appendix
@@ -1161,7 +611,7 @@ the default on platforms supporting POSIX threads, EMS can be used in a
 threaded application or library. The only requirement is that the sections of
 the application that use threads are wrapped in
 \texttt{emsMark}/\texttt{emsRlse} blocks, as in:
-\begin{verbatim}
+\begin{terminalv}
 
 void *make_report( void *threadid )
 {
@@ -1198,7 +648,7 @@ int main ( int argc, char *argv[] )
     emsRlse();
 }
 
-\end{verbatim}
+\end{terminalv}
 
 The error messages can then be delivered or loaded as normal (when using ERR
 it is important not to make any calls to it in the threaded section, as this
@@ -1206,12 +656,12 @@ may access unprotected global data). The status return recovered by
 \texttt{emsStat} will be one from one of the threads, it is not possible to
 find out the status from all threads using EMS. In a standalone program as
 shown the error messages:
-\begin{verbatim}
+\begin{terminalv}
 !! Oh no an error in thread 1
 !  Oh no an error in thread 2
 !  Oh no an error in thread 3
 !  Oh no an error in thread 4
-\end{verbatim}
+\end{terminalv}
 will be shown using the default delivery \texttt{printf} mechanism during the
 \texttt{emsRlse} call (since the error stack context falls to the base level).
 
